  (Felipe)
- Fixed bug #52468 (wddx_deserialize corrupts integer field value when left
  empty). (Felipe)
- Fixed bug #52454 (Relative dates and getTimestamp increments by one day).
  (Derick)
- Fixed bug #52436 (Compile error if systems do not have stdint.h)
  (Sriram Natarajan)
- Fixed bug #52433 (Call to undefined method mysqli::poll() - must be static).
  (Andrey)
- Fixed bug #52417 (MySQLi build failure with mysqlnd on MacOS X). (Andrey)
- Fixed bug #52413 (MySQLi/libmysql build failure on OS X, FreeBSD). (Andrey)
- Fixed bug #52390 (mysqli_report() should be per-request setting). (Kalle)
- Fixed bug #52361 (Throwing an exception in a destructor causes invalid
  catching). (Dmitry)
- Fixed bug #52302 (mysqli_fetch_all does not work with MYSQLI_USE_RESULT).
  (Andrey)
- Fixed bug #52221 (Misbehaviour of magic_quotes_runtime (get/set)). (Andrey)
- Fixed bug #51610 (Using oci_connect causes PHP to take a long time to
  exit). Requires Oracle bug fix 9891199 for this patch to have an
  effect. (Oracle Corp.)
- Fixed bug #50481 (Storing many SPLFixedArray in an array crashes). (Felipe)

22 Jul 2010, PHP 5.3.3
- Upgraded bundled sqlite to version 3.6.23.1. (Ilia)
- Upgraded bundled PCRE to version 8.02. (Ilia)

- Added support for JSON_NUMERIC_CHECK option in json_encode() that converts 
  numeric strings to integers. (Ilia)
- Added stream_set_read_buffer, allows to set the buffer for read operation.
  (Pierre)
- Added stream filter support to mcrypt extension (ported from 
  mcrypt_filter). (Stas)
- Added full_special_chars filter to ext/filter. (Rasmus)
- Added backlog socket context option for stream_socket_server(). (Mike)
- Added fifth parameter to openssl_encrypt()/openssl_decrypt()
  (string $iv) to use non-NULL IV.
  Made implicit use of NULL IV a warning. (Sara)
- Added openssl_cipher_iv_length(). (Sara)
- Added FastCGI Process Manager (FPM) SAPI. (Tony)
- Added recent Windows versions to php_uname and fix undefined windows 
  version support. (Pierre)